Finished editing questionnaire tool.

--- a/templates/questionnaire/edit.questionnaire.html
+++ b/templates/questionnaire/edit.questionnaire.html
@@ -50,7 +50,7 @@
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
                 </div>
                 <div class="col-xs-6 col-md-6" style="margin-bottom: 20px;">
-                    <label style="font-size: 20px;">Finalize the questionnaire: <input ng-change="setChangesMade()" type="checkbox" ng-true-value="true" ng-false-value="false" ng-model="questionnaire.final" ng-disabled="questionnaire.readOnly"></label>
+                    <label style="font-size: 20px;">Finalize the questionnaire: <input ng-change="setChangesMade()" type="checkbox" ng-true-value="1" ng-false-value="0" ng-model="questionnaire.final" ng-disabled="questionnaire.readOnly"></label>
                 </div>
             </div>
 
