--- a/templates/questionnaire/edit.questionnaire.html
+++ b/templates/questionnaire/edit.questionnaire.html
@@ -12,7 +12,7 @@
         <p class="text-danger">This questionnaire has being already sent to patients.</p>
     </div>
     <p class="modal-title-caption col-xs-12">
-        {{questionnaire.text_EN}} / {{questionnaire.text_FR}}
+        {{questionnaire.title_EN}} / {{questionnaire.title_FR}}
     </p>
     <div class="modal-buttons col-xs-12">
         <span>
@@ -36,13 +36,13 @@
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">EN</span>
-                        <textarea class="form-control" rows="1" ng-model="questionnaire.text_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
+                        <textarea class="form-control" rows="1" ng-model="questionnaire.title_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
                         <span class="input-group-addon">FR</span>
-                        <textarea class="form-control" rows="1" ng-model="questionnaire.text_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
+                        <textarea class="form-control" rows="1" ng-model="questionnaire.title_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></textarea>
                     </div>
                 </div>
             </div>
@@ -54,6 +54,46 @@
                 </div>
             </div>
 
+        </div>
+        <!-- SECTION: Description -->
+        <div uib-accordion-group is-open="descriptionSection.open">
+            <uib-accordion-heading>
+                <div>
+                    <strong>Descriptions</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': descriptionSection.open, 'glyphicon-chevron-right': !descriptionSection.open}"></i>
+                </div>
+            </uib-accordion-heading>
+            <div class="row" ng-hide="questionnaire.readOnly || questionnaire.final">
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">HTML (English)</span>
+                    </div>
+                    <div class="input-group">
+                        <div text-angular ng-model="questionnaire.description_EN" ng-change="setChangesMade()" placeholder="English Description" required="required" ta-toolbar="toolbar"  ng-change="setChangesMade()" ng-disabled="questionnaire.readOnly || questionnaire.final"></div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">HTML (Français)</span>
+                    </div>
+                    <div class="input-group">
+                        <div text-angular ng-model="questionnaire.description_FR" ng-change="setChangesMade()" placeholder="Description Français" required="required" ta-toolbar="toolbar" ></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" ng-show="questionnaire.readOnly || questionnaire.final">
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">HTML (English)</span>
+                    </div>
+                    <div ng-bind-html="questionnaire.description_EN"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
+                    <div style="text-align:center; margin-bottom: 10px;">
+                        <span style="font-size:20px;">HTML (Français)</span>
+                    </div>
+                    <div ng-bind-html="questionnaire.description_FR"></div>
+                </div>
+            </div>
         </div>
         <!-- SECTION: Privacy -->
         <div uib-accordion-group is-open="privacySection.open">
